Query of Istatistic completed

--- a/MvcOnlineTicariOtomasyonSistemi/Views/Istatistik/Index.cshtml
+++ b/MvcOnlineTicariOtomasyonSistemi/Views/Istatistik/Index.cshtml
@@ -83,7 +83,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d1</h3>
+                    <h3>@ViewBag.dgr1</h3>
 
                     <p>Toplam Cari</p>
 
@@ -97,7 +97,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d2</h3>
+                    <h3>@ViewBag.dgr2</h3>
 
                     <p>Ürün Sayısı</p>
 
@@ -111,7 +111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d3</h3>
+                    <h3>@ViewBag.dgr3</h3>
 
                     <p>Personel Sayısı</p>
 
@@ -125,7 +125,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d4</h3>
+                    <h3>@ViewBag.dgr4</h3>
 
                     <p>Kategori Sayısı</p>
 
@@ -151,7 +151,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d5</h3>
+                    <h3>@ViewBag.dgr5</h3>
 
                     <p>Toplam Stok</p>
 
@@ -165,7 +165,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d6</h3>
+                    <h3>@ViewBag.dgr6</h3>
 
                     <p>Marka Sayısı</p>
 
@@ -179,7 +179,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d7</h3>
+                    <h3>@ViewBag.dgr7</h3>
 
                     <p>Kritik Seviye</p>
 
@@ -193,7 +193,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d8</h3>
+                    <h2 style="color:aliceblue;text-align:center">@ViewBag.dgr8</h2>
 
                     <p>Max Fiyatlı Ürün</p>
 
@@ -219,9 +219,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d9</h3>
+                    <h2 style="color:aliceblue; text-align:center">@ViewBag.dgr9</h2>
 
-                    <p>Min Fiyatlı Ürün</p>
+                    <p style="text-align:center">Min Fiyatlı Ürün</p>
 
                 </div>
 
@@ -233,7 +233,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d12</h3>
+                    <h3>@ViewBag.dgr10</h3>
 
                     <p>Max Marka</p>
 
@@ -247,7 +247,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d10</h3>
+                    <h3>@ViewBag.dgr11</h3>
 
                     <p>Buzdolabı Sayısı</p>
 
@@ -261,7 +261,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d11</h3>
+                    <h3>@ViewBag.dgr12</h3>
 
                     <p>Laptop Sayısı</p>
 
@@ -287,7 +287,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d13</h3>
+                    <h3>@ViewBag.dgr13</h3>
 
                     <p>En Çok Satan</p>
 
@@ -301,7 +301,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d14</h3>
+                    <h2 style="color:aliceblue;">@ViewBag.dgr14 TL</h2>
 
                     <p>Kasadaki Tutar</p>
 
@@ -315,9 +315,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d15</h3>
+                    <h3>@ViewBag.dgr15</h3>
 
-                    <p>Bugünkü Satşlar</p>
+                    <p>Bugünkü Satışlar</p>
 
                 </div>
 
@@ -329,7 +329,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
 
-                    <h3>@ViewBag.d16</h3>
+                    <h3>@ViewBag.dgr16 TL</h3>
 
                     <p>Bugünkü Kasa</p>
 
