Partial Views Added

--- a/MvcOnlineTicariOtomasyonSistemi/Views/Shared/AdminLayout.cshtml
+++ b/MvcOnlineTicariOtomasyonSistemi/Views/Shared/AdminLayout.cshtml
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
@@ -13,11 +13,12 @@
     <title>Static Navigation - SB Admin</title>
     <link href="~/web/dist/css/styles.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="~/Views/Shared/favicon.ico" type="image/x-icon">    @*Favicon Çalışmadı*@
 </head>
 <body>
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Ticari Otomasyon  <i class="fab fa-artstation" style="color:darkorange; font-size:15px;"></i></a>
-        
+        <a class="navbar-brand" href="index.html">Ticari Otomasyon  <i class="fab fa-artstation fa-spin" style="color:darkorange; font-size:15px;"></i></a>
+
         <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#">
             <i class="fas fa-bars"></i>
         </button><!-- Navbar Search-->
@@ -123,6 +124,10 @@
                         <a class="nav-link" href="/UrunDetay/Index">
                             <div class="sb-nav-link-icon"><i class="fas fa-images"></i></div>
                             Urun Detay
+                        </a>
+                        <a class="nav-link" href="/Istatistik/KolayTablolar">
+                            <div class="sb-nav-link-icon"><i class="fas fa-database"></i></div>
+                            Hızlı Bakış
                         </a>
                     </div>
                 </div>
